[gd_scene load_steps=4 format=3 uid="uid://ddjews4qv80rc"]

[ext_resource type="Script" path="res://scripts/row.gd" id="1_ulu66"]
[ext_resource type="FontFile" uid="uid://2odoyvlagkaj" path="res://assets/cmunrm.ttf" id="2_xl84w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_srmvi"]
size = Vector2(384, 64)

[node name="Row" type="Node2D"]
script = ExtResource("1_ulu66")

[node name="Label1" type="Label" parent="."]
z_index = 1
offset_left = -192.0
offset_top = -32.0
offset_right = -128.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xl84w")
theme_override_font_sizes/font_size = 46
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
z_index = 1
offset_left = -128.0
offset_top = -32.0
offset_right = -64.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xl84w")
theme_override_font_sizes/font_size = 46
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
z_index = 1
offset_left = -64.0
offset_top = -32.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xl84w")
theme_override_font_sizes/font_size = 46
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
z_index = 1
offset_top = -32.0
offset_right = 64.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xl84w")
theme_override_font_sizes/font_size = 46
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConstTerm" type="Label" parent="."]
z_index = 1
offset_left = 64.0
offset_top = -32.0
offset_right = 192.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xl84w")
theme_override_font_sizes/font_size = 46
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_srmvi")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.03

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
